adapt for java 11